2017-04-15 Wolfgang Hofer <hof@gimp.org>

- MovePath support Handle Offsets, "Reset all controlpoints" Button protects keyframe information by default
  This change of behavior is a bugfix to prevent unwanted loss of keyframe information in the path controlpoints.
  In case where reset of keyframe information is wanted
  Clicking "Reset all controlpoints" Button while holding down the ALT key removes keyframe information
  from all controlpoints the same way as the old behavior always did.
  
  Added X and Y Controlpoint Coordinate Buttons to copy coordinate from previous Controlpoint
  Holding down the shift Key copy coordinate from next Controlpoint
  Holding down the ctrl Key Calculate coordinate as average between previous and next Controlpoint.

- MovePath Save Button overwrites pointfile (after succsessful inital load or save) without popup the fileselection.
  Hold Ctrl or Shift forces the fileselection (Save As), 
  Show the pointfilename (as part of the framelabel Edit Controlpoints)

- Detail tracking history information is now stored in temporary image parasite
  in the (mtrace) image that is updated while playback in detail tracking mode.
  (older versions stored history global in the gimp session)

- bugfix in the BlendFill filter (that applied always to the layer on top of stack instead of the active drawable)
  furthermore keep the layermask (in case the active layer has one)

- The wrapper for the 3rd party resysnthesizer plugin now supports the same options as the
  python script "plugin-heal-selecton.py" that ships with the resynthesizer
  with additional option to load the selection from a vectors file in SVG format.

- Added a wrapper for the gimp desaturation procedure
  (so it can be used in GIMP-GAP triggered filtercalls such as filtermacro
  in filter all layers or modify frames feature)

- Added Dialog and extended the edge detection method for use in  GIMP-GAP triggered filtercalls